<resources>
    <string name="app_name">CalorieCalculatorApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="blank"></string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="target_weight">Target Weight</string>
    <string name="activity_level">Activity Level</string>
    <string-array name="activity_level">
        <item>Light exercise</item>
        <item>Moderate exercise</item>
        <item>Heavy exercise</item>
        <item>Very heavy exercise</item>
    </string-array>
    <string-array name="weekly_goal">
        <item>I want to loose</item>
        <item>I want to gian</item>
    </string-array>

    <string name="mHome">Home</string>
    <string name="mProfile">Profile</string>
    <string name="mGoal">Goal</string>
    <string name="mCategories">Categories</string>
    <string name="mFood">Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="datepicker">Date picker</string>
</resources>