<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/mHome" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/mProfile" />
        <item
            android:id="@+id/nav_goal"
            android:icon="@drawable/ic_goal"
            android:title="@string/mGoal" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/mCategories" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_food"
            android:title="@string/mFood" />
    </group>
</menu>