<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/editTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <RadioGroup
                            android:id="@+id/radioGroupGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/radioButtonMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/male" />
                            <RadioButton
                                android:id="@+id/radioButtonFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                        </RadioGroup>
                    </TableRow>
                </TableLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/editTextHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/tvCm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cm" />
                    </TableRow>

                </TableLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <EditText
                            android:id="@+id/editTextWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/tvKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kg" />
                    </TableRow>

                </TableLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvActivity_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_level" />

                <Spinner
                    android:id="@+id/spinnerActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/activity_level"/>
            </TableRow>
            <Button
                android:id="@+id/btnSignUp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up" />

        </TableLayout>

    </LinearLayout>
</ScrollView>