<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank" />
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/editTextEmailAddressProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tvDob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth" />

                    <EditText
                        android:id="@+id/editTextDateProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >
                            <RadioGroup
                                android:id="@+id/radioGroupGenderProfile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <RadioButton
                                    android:id="@+id/radioButtonMaleProfile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="true"
                                    android:text="@string/male" />
                                <RadioButton
                                    android:id="@+id/radioButtonFemaleProfile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/female" />
                            </RadioGroup>
                        </TableRow>
                    </TableLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tvHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <EditText
                                android:id="@+id/editTextHeightProfile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number" />

                            <TextView
                                android:id="@+id/tvCm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cm" />
                        </TableRow>

                    </TableLayout>

                </TableRow>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Save" />

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>