<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvErrorMessageGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTargetWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/target_weight" />

                <EditText
                    android:id="@+id/editTextTargerWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tvKg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg" />

            </TableRow>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Weekly goal" />

                    <Spinner
                        android:id="@+id/spinnerWeekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/weekly_goal"/>

                    <EditText
                        android:id="@+id/editTextWeekly"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/tvKg3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="kg/week" />

                </TableRow>
            </TableLayout>
            <Button
                android:id="@+id/btnLetsStart"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Let's start" />
        </TableLayout>

    </LinearLayout>
</ScrollView>